--- a/multivariate/multivariate.html
+++ b/multivariate/multivariate.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Andy Grogan-Kaylor">
-<meta name="dcterms.date" content="2026-02-06">
+<meta name="dcterms.date" content="2026-02-07">
 
 <title>Why Do We Need Multivariate Models To Evaluate Programs?</title>
 <style>
@@ -86,7 +86,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">February 6, 2026</p>
+      <p class="date">February 7, 2026</p>
     </div>
   </div>
   
@@ -105,7 +105,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="multivariate_files/figure-html/unnamed-chunk-1-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="multivariate_files/figure-html/unnamed-chunk-2-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -428,6 +428,15 @@ flowchart LR
 <section id="what-to-do" class="level1" data-number="10">
 <h1 data-number="10"><span class="header-section-number">10</span> What To Do?</h1>
 <p><em>Accounting for</em>, <em>ruling out</em>, or <em>controlling for</em> these background factors is one of the major reasons we use statistics.</p>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="multivariate_files/figure-html/unnamed-chunk-11-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
 </section>
 
 
