added GAM citations

--- a/empathy/empathy.html
+++ b/empathy/empathy.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Andy Grogan-Kaylor">
-<meta name="dcterms.date" content="2026-02-03">
+<meta name="dcterms.date" content="2026-02-09">
 
 <title>When Empathy Helps and Hurts</title>
 <style>
@@ -80,11 +80,11 @@ div.csl-indent {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-text-color-overlay: black;
---cr-narrative-background-color-overlay: lightgrey;
---cr-narrative-text-color-sidebar: black;
---cr-section-background-color: white;
+          --cr-narrative-background-color-overlay: lightgrey;
+--cr-narrative-text-color-overlay: black;
 --cr-narrative-background-color-sidebar: white;
+--cr-section-background-color: white;
+--cr-narrative-text-color-sidebar: black;
         }
       </style>
     
@@ -109,7 +109,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">February 3, 2026</p>
+      <p class="date">February 9, 2026</p>
     </div>
   </div>
   
@@ -138,7 +138,7 @@ div.csl-indent {
 <div class="trigger new-trigger" data-focus-on="cr-method">
 <section id="method" class="level1 narrative">
 <h1>Method</h1>
-<p>Data from 303 adults were stratified based on the presence or absence of maltreatment history in early childhood. Self-reports of lifetime self-harm thoughts in adulthood and empathy during adolescence were examined in both groups using generalized additive models to assess non-linear relationships. Models also controlled for respondents’ age, gender, and socio-economic status.</p>
+<p>Data from 303 adults were stratified based on the presence or absence of maltreatment history in early childhood. Self-reports of lifetime self-harm thoughts in adulthood and empathy during adolescence were examined in both groups using generalized additive models <span class="citation" data-cites="Wood2017 Wood2025">(<a href="#ref-Wood2017" role="doc-biblioref">Wood, 2017</a>, <a href="#ref-Wood2025" role="doc-biblioref">2025</a>)</span> to assess non-linear relationships. Models also controlled for respondents’ age, gender, and socio-economic status.</p>
 </section>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-overall">
@@ -320,6 +320,12 @@ div.csl-indent {
 <div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">References</h2><div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" data-line-spacing="2" role="list">
 <div id="ref-empathy" class="csl-entry" role="listitem">
 Hong, S., Grogan-Kaylor, A., Kim, M., Bender, A. E., Saba, S., Yu, C.-L., Fedina, L., &amp; Herrenkohl, T. I. (2026). When empathy helps and hurts: Non-linear associations between early childhood maltreatment history, empathy and self-harm thoughts. <em>Child Maltreatment</em>. <a href="https://doi.org/10.1177/10775595261422448">https://doi.org/10.1177/10775595261422448</a>
+</div>
+<div id="ref-Wood2017" class="csl-entry" role="listitem">
+Wood, S. N. (2017). <em>Generalized additive models: An introduction with <span>R</span></em> (Second edition.). CRC Press, Taylor &amp; Francis Group.
+</div>
+<div id="ref-Wood2025" class="csl-entry" role="listitem">
+Wood, S. N. (2025). Generalized additive models. <em>Annual Review of Statistics and Its Application</em>, <em>12</em>, 497–526. <a href="https://doi.org/10.1146/annurev-statistics-112723-034249">https://doi.org/10.1146/annurev-statistics-112723-034249</a>
 </div>
 </div></section></div></main>
 <!-- /main column -->
