--- a/spillover-of-violence/spillover-of-violence.html
+++ b/spillover-of-violence/spillover-of-violence.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Global Families Research Team">
-<meta name="dcterms.date" content="2025-11-25">
+<meta name="dcterms.date" content="2026-02-18">
 
 <title>The Spillover of Violence in Low- and Middle-Income Countries</title>
 <style>
@@ -91,10 +91,10 @@ div.csl-indent {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-section-background-color: white;
+          --cr-narrative-text-color-sidebar: black;
 --cr-narrative-background-color-overlay: grey;
+--cr-section-background-color: white;
 --cr-narrative-background-color-sidebar: white;
---cr-narrative-text-color-sidebar: black;
         }
       </style>
     
@@ -118,7 +118,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">November 25, 2025</p>
+      <p class="date">February 18, 2026</p>
     </div>
   </div>
   
@@ -161,22 +161,22 @@ div.csl-indent {
 <p>We employed multilevel logistic regression models.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="25%,50%" data-scale-by="1.5" data-focus-on="cr-analysis">
+<div class="trigger new-trigger" data-scale-by="1.5" data-pan-to="25%,50%" data-focus-on="cr-analysis">
 <div class="narrative">
 <p>We estimated the factors associated with parental physical abuse.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="-55%,50%" data-scale-by="1.5" data-focus-on="cr-analysis">
+<div class="trigger new-trigger" data-scale-by="1.5" data-pan-to="-55%,50%" data-focus-on="cr-analysis">
 <div class="narrative">
 <p>We controlled for country-level violence—measured by rates of terrorism and political conflict, homicide, and women’s exposure to IPV</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="-75%,50%" data-scale-by="1.5" data-focus-on="cr-analysis">
+<div class="trigger new-trigger" data-scale-by="1.5" data-pan-to="-75%,50%" data-focus-on="cr-analysis">
 <div class="narrative">
 <p>We also controlled for other covariates, including norms justifying violence against women and children and socio-demographic factors.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="-99%,50%" data-scale-by="1.5" data-focus-on="cr-analysis">
+<div class="trigger new-trigger" data-scale-by="1.5" data-pan-to="-99%,50%" data-focus-on="cr-analysis">
 <div class="narrative">
 <p>We accounted for the country in which study participants lived.</p>
 </div>
@@ -246,8 +246,8 @@ div.csl-indent {
 <div id="fig-2" class="cell-output-display quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="plotly html-widget html-fill-item" id="htmlwidget-3afaaf83756e0cbff769" style="width:100%;height:464px;"></div>
-<script type="application/json" data-for="htmlwidget-3afaaf83756e0cbff769">{"x":{"visdat":{"12293693c077":["function () ","plotlyVisDat"]},"cur_data":"12293693c077","attrs":{"12293693c077":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"z":1,"text":{},"colors":"#1CABE2","hoverinfo":"text","locations":{},"showscale":false,"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showframe":true,"showcoastlines":true,"showcountries":true,"showland":true,"countrycolor":"rgba(190,190,190,1)","showocean":true,"oceancolor":"white","projection":{"type":"orthographic","rotation":{"lon":-25,"lat":0,"roll":0}},"landcolor":"rgba(211,211,211,1)","bgcolor":"transparent"},"plot_bgcolor":"transparent","paper_bgcolor":"transparent","scene":{"zaxis":{"title":[]}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"colorbar":{"title":"","ticklen":2},"colorscale":[["0","rgba(28,171,226,1)"],["1","rgba(28,171,226,1)"]],"showscale":false,"z":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"text":["Algeria","Argentina","Bangladesh","Barbados","Belarus","Belize","Benin","Bosnia and Herzegovina","Cameroon","Central African Republic","Chad","Democratic Republic of the Congo","Republic of the Congo","Costa Rica","Cote d'Ivoire","Dominican Republic","El Salvador","Eswatini","Ghana","Guinea","Guinea Bissau","Guyana","Iraq","Jamaica","Kazakhstan","Kenya","Kosovo","Kyrgyzstan","Laos","Macedonia","Madagascar","Malawi","Mali","Mauritania","Mexico","Moldova","Mongolia","Montenegro","Nepal","Nigeria","Pakistan","Panama","Paraguay","Sao Tome and Principe","Senegal","Serbia","Sierra Leone","Somalia","St. Lucia","State of Palestine","Suriname","Thailand","The Gambia","Togo","Trinidad and Tobago","Tunisia","Turkmenistan","Ukraine","Uruguay","Vietnam","Zimbabwe"],"hoverinfo":["text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text"],"locations":["DZA","ARG","BGD","BRB","BLR","BLZ","BEN","BIH","CMR","CAF","TCD","COD","COG","CRI","CIV","DOM","SLV","SWZ","GHA","GIN","GNB","GUY","IRQ","JAM","KAZ","KEN",null,"KGZ","LAO","MKD","MDG","MWI","MLI","MRT","MEX","MDA","MNG","MNE","NPL","NGA","PAK","PAN","PRY","STP","SEN","SRB","SLE","SOM","LCA","PSE","SUR","THA","GMB","TGO","TTO","TUN","TKM","UKR","URY","VNM","ZWE"],"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"type":"choropleth","geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<div class="plotly html-widget html-fill-item" id="htmlwidget-39ea81e592f209437167" style="width:100%;height:464px;"></div>
+<script type="application/json" data-for="htmlwidget-39ea81e592f209437167">{"x":{"visdat":{"634cd23bc18":["function () ","plotlyVisDat"]},"cur_data":"634cd23bc18","attrs":{"634cd23bc18":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"z":1,"text":{},"colors":"#1CABE2","hoverinfo":"text","locations":{},"showscale":false,"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showframe":true,"showcoastlines":true,"showcountries":true,"showland":true,"countrycolor":"rgba(190,190,190,1)","showocean":true,"oceancolor":"white","projection":{"type":"orthographic","rotation":{"lon":-25,"lat":0,"roll":0}},"landcolor":"rgba(211,211,211,1)","bgcolor":"transparent"},"plot_bgcolor":"transparent","paper_bgcolor":"transparent","scene":{"zaxis":{"title":[]}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"colorbar":{"title":"","ticklen":2},"colorscale":[["0","rgba(28,171,226,1)"],["1","rgba(28,171,226,1)"]],"showscale":false,"z":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"text":["Algeria","Argentina","Bangladesh","Barbados","Belarus","Belize","Benin","Bosnia and Herzegovina","Cameroon","Central African Republic","Chad","Democratic Republic of the Congo","Republic of the Congo","Costa Rica","Cote d'Ivoire","Dominican Republic","El Salvador","Eswatini","Ghana","Guinea","Guinea Bissau","Guyana","Iraq","Jamaica","Kazakhstan","Kenya","Kosovo","Kyrgyzstan","Laos","Macedonia","Madagascar","Malawi","Mali","Mauritania","Mexico","Moldova","Mongolia","Montenegro","Nepal","Nigeria","Pakistan","Panama","Paraguay","Sao Tome and Principe","Senegal","Serbia","Sierra Leone","Somalia","St. Lucia","State of Palestine","Suriname","Thailand","The Gambia","Togo","Trinidad and Tobago","Tunisia","Turkmenistan","Ukraine","Uruguay","Vietnam","Zimbabwe"],"hoverinfo":["text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text"],"locations":["DZA","ARG","BGD","BRB","BLR","BLZ","BEN","BIH","CMR","CAF","TCD","COD","COG","CRI","CIV","DOM","SLV","SWZ","GHA","GIN","GNB","GUY","IRQ","JAM","KAZ","KEN",null,"KGZ","LAO","MKD","MDG","MWI","MLI","MRT","MEX","MDA","MNG","MNE","NPL","NGA","PAK","PAN","PRY","STP","SEN","SRB","SLE","SOM","LCA","PSE","SUR","THA","GMB","TGO","TTO","TUN","TKM","UKR","URY","VNM","ZWE"],"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"type":"choropleth","geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;1: Countries in UNICEF MICS Data
@@ -298,8 +298,8 @@ Figure&nbsp;1: Countries in UNICEF MICS Data
 <div id="cr-results2" class="scale-to-fill sticky">
 <div class="cell">
 <div class="cell-output-display">
-<div id="htmlwidget-2839327c99e174f7fe01" style="width:100%;height:677px;" class="plotly html-widget"></div>
-<script type="application/json" data-for="htmlwidget-2839327c99e174f7fe01">{"x":{"visdat":{"1229810f148":["function () ","plotlyVisDat"]},"cur_data":"1229810f148","attrs":{"1229810f148":{"x":{},"y":{},"text":{},"hoverinfo":"text","marker":{"size":15,"color":"#E2231A","line":{"color":"black","width":2}},"mode":"lines+markers","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter"}},"layout":{"height":700,"margin":{"b":100,"l":50,"t":200,"r":50,"pad":4},"title":"As political violence and terrorism increase, <br>so does the probability of physical abuse.","xaxis":{"domain":[0,1],"automargin":true,"title":"percentile of political violence and terrorism"},"yaxis":{"domain":[0,1],"automargin":true,"title":"probability of abuse"},"hoverlabel":{"bgcolor":"white"},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"x":[1,50,75,90,95,99],"y":[0.1225253,0.12263159999999999,0.1260397,0.1299342,0.1444616,0.15793109999999999],"text":["percentile of political violence and terrorism:  1 <br>probability of abuse: 0.1225253","percentile of political violence and terrorism:  50 <br>probability of abuse: 0.1226316","percentile of political violence and terrorism:  75 <br>probability of abuse: 0.1260397","percentile of political violence and terrorism:  90 <br>probability of abuse: 0.1299342","percentile of political violence and terrorism:  95 <br>probability of abuse: 0.1444616","percentile of political violence and terrorism:  99 <br>probability of abuse: 0.1579311"],"hoverinfo":["text","text","text","text","text","text"],"marker":{"color":"#E2231A","size":15,"line":{"color":"black","width":2}},"mode":"lines+markers","type":"scatter","error_y":{"color":"rgba(31,119,180,1)"},"error_x":{"color":"rgba(31,119,180,1)"},"line":{"color":"rgba(31,119,180,1)"},"xaxis":"x","yaxis":"y","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-f4a9843eb961dddbc00a" style="width:100%;height:677px;" class="plotly html-widget"></div>
+<script type="application/json" data-for="htmlwidget-f4a9843eb961dddbc00a">{"x":{"visdat":{"634c3d87e807":["function () ","plotlyVisDat"]},"cur_data":"634c3d87e807","attrs":{"634c3d87e807":{"x":{},"y":{},"text":{},"hoverinfo":"text","marker":{"size":15,"color":"#E2231A","line":{"color":"black","width":2}},"mode":"lines+markers","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter"}},"layout":{"height":700,"margin":{"b":100,"l":50,"t":200,"r":50,"pad":4},"title":"As political violence and terrorism increase, <br>so does the probability of physical abuse.","xaxis":{"domain":[0,1],"automargin":true,"title":"percentile of political violence and terrorism"},"yaxis":{"domain":[0,1],"automargin":true,"title":"probability of abuse"},"hoverlabel":{"bgcolor":"white"},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"x":[1,50,75,90,95,99],"y":[0.1225253,0.12263159999999999,0.1260397,0.1299342,0.1444616,0.15793109999999999],"text":["percentile of political violence and terrorism:  1 <br>probability of abuse: 0.1225253","percentile of political violence and terrorism:  50 <br>probability of abuse: 0.1226316","percentile of political violence and terrorism:  75 <br>probability of abuse: 0.1260397","percentile of political violence and terrorism:  90 <br>probability of abuse: 0.1299342","percentile of political violence and terrorism:  95 <br>probability of abuse: 0.1444616","percentile of political violence and terrorism:  99 <br>probability of abuse: 0.1579311"],"hoverinfo":["text","text","text","text","text","text"],"marker":{"color":"#E2231A","size":15,"line":{"color":"black","width":2}},"mode":"lines+markers","type":"scatter","error_y":{"color":"rgba(31,119,180,1)"},"error_x":{"color":"rgba(31,119,180,1)"},"line":{"color":"rgba(31,119,180,1)"},"xaxis":"x","yaxis":"y","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
 </div>
 </div>
 </div>
